[package]
name = "worker-cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bson = "2.0"
env_logger = "0.10"
dotenvy = "0.15"
log = "0.4"
mongodb = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.10"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
